- Added Authorization for different roles;